--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
+  <link rel="shortcut icon" href="../src/assets/images/logo.svg" type="image/x-icon">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Let Me Ask</title>
